# unitysvc-data

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/unitysvc_data/: __init__.py  _manifest.json  _registry.py  _version.py  cli.py  presets.py
src/unitysvc_data/examples/api/code-example-requests/: README.md  code-example-v1.py.j2
src/unitysvc_data/examples/api/code-example-shell/: README.md  code-example-v1.sh.j2
src/unitysvc_data/examples/api/connectivity/: README.md  connectivity-v1.sh.j2
src/unitysvc_data/examples/apprise-notify/code-example-py/: README.md  code-example-postmark-email-v1.py.j2  code-example-sparkpost-email-v1.py.j2
src/unitysvc_data/examples/apprise-notify/code-example-sh/: README.md  code-example-bark-v1.sh.j2  code-example-brevo-email-v1.sh.j2  code-example-discord-v1.sh.j2  code-example-feishu-msg-v1.sh.j2  code-example-gotify-v1.sh.j2  code-example-groupme-msg-v1.sh.j2  code-example-json-v1.sh.j2  code-example-line-msg-v1.sh.j2  code-example-matrix-v1.sh.j2  code-example-messagebird-sms-v1.sh.j2  code-example-msteams-v1.sh.j2  code-example-ntfy-v1.sh.j2  code-example-onesignal-v1.sh.j2  code-example-opsgenie-v1.sh.j2  code-example-pagerduty-v1.sh.j2  code-example-pagertree-v1.sh.j2  code-example-postmark-email-v1.sh.j2  code-example-pushbullet-v1.sh.j2  code-example-pushjet-v1.sh.j2  code-example-pushover-v1.sh.j2  code-example-resend-email-v1.sh.j2  (+15 more)
tests/: test_build.py  test_cli.py  test_presets.py
tools/: build.py
(+878 files in other folders)
